--- a/notebooks/Code_vic.ipynb
+++ b/notebooks/Code_vic.ipynb
@@ -543,7 +543,7 @@
     "        for data in test_loader:\n",
     "            inputs = data.to(device)\n",
     "            outputs = model(inputs)\n",
-    "            psnr_val += get_psnr(outputs, inputs, psnr)\n",
+    "            psnr_val += get_psnr(inputs, outputs, psnr)\n",
     "            count += 1\n",
     "        avg_psnr = psnr_val / count\n",
     "    model.to(DEVICE)  # Move model back to the original device\n",
